usei javascript para adicionar mais funcinalidades

--- a/aula 2 js/index.html
+++ b/aula 2 js/index.html
@@ -7,23 +7,42 @@
     <link rel="stylesheet" href="aula2js.css">
 </head>
 <body>
+    <div class="atv"><h4>atv 1</h4></div>
+    <div class="atv"><h4>atv 2</h4></div>
+    <div class="atv"><h4>atv 3 e 4</h4></div>
     <div class="box">
-        <h3>Clique para ver meu apelido</h3>
+        <h3 id="ti_mudar">Clique para ver meu apelido</h3>
         <p id="t_mudar">Ana Caroliny</p>
         <button id="b_mudar">mudar</button>
     </div>
     <div class="box">
+        <h3>digite algo que você goste de fazer</h3>
         <input type="text" id="digita">
         <p id="copiar"></p>
     </div>
     <div class="box">
-        <div class="duvida" id="duvd">
-            <img src="https://cdn-icons-png.flaticon.com/512/25/25400.png" alt="">
-            <div class="dica">isso é um cavalo</div>
+        <div class="duvida">
+            <img id="duvida"src="https://cdn-icons-png.flaticon.com/512/25/25400.png" alt="">
+            <div class="dica" id="dica">isso é um cavalo</div>
         </div>
         <h3>Clique 2x para mudar a cor</h3>
         <img id="p_img"src="https://static.vecteezy.com/system/resources/thumbnails/024/508/958/small/horse-isolated-on-background-with-generative-ai-png.png" alt="">
     </div>
+    <div class="atv"><h4>atv 5</h4></div>
+    <div class="atv"><h4>atv 6</h4></div>
+    <div class="box">
+        <h3>digite e veja a quantidade de letras</h3>
+        <input type="text" id="quantidade">
+        <p id="numero"></p>
+    </div>
+    <div class="box">
+        <h3>coloque o seu código</h3>
+        <form action="">
+            <input type="text" id="entrada">
+            <button id="enviar" type="submit">enviar</button>
+        </form>
+    </div>
+
    
 
     <script src="aula2.js" defer></script>
