--- a/aula 3 js/aula3.html
+++ b/aula 3 js/aula3.html
@@ -10,9 +10,28 @@
    <section id="hero">
     <h2 id="sub">Subtítulo da seção</h2>
    </section>
-   <ul id="lista"></ul>
-    <button id="btntopo">Adicionar no topo</button>
-   <button id="btnfim">Adicionar no fim</button>
+   <div class="container">
+    <h4 class="texto">Lista de adicionar e remover</h4>
+        <div class="box1">
+            <ul id="lista"></ul> 
+        </div>
+        <div class="box2">
+            <button id="btntopo">Adicionar no topo</button>
+            <button id="btnfim">Adicionar no fim</button>
+            <button id="limpar">limpar tudo</button>
+        </div>
+    </div>  
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
    <script src="aula3.js"></script>
 </body>
 </html>
