--- a/aula 3 js/aula3.html
+++ b/aula 3 js/aula3.html
@@ -21,17 +21,7 @@
             <button id="limpar">limpar tudo</button>
         </div>
     </div>  
-    <div class="box3"></div>
-    <div class="box3"></div>
-    <div class="box3"></div>
-    <div class="box3"></div>
-    <div class="box3"></div>
-    <div class="box3"></div>
-    <div class="box3"></div>
-    <div class="box3"></div>
-    <div class="box3"></div>
-    <div class="box3"></div>
-    <div class="box3"></div>
+    <div class="box3" id="box3"></div>
    <script src="aula3.js"></script>
 </body>
 </html>
